--- a/index.html
+++ b/index.html
@@ -833,15 +833,19 @@
             <option value="Felipe Egídio de Miranda"></option>
             <option value="Felipe Leite Pestana"></option>
             <option value="Gabriel Henrique Bezerra Rosa"></option>
+            <option value="Gabriel Martins"></option>
             <option value="Glaucia Maria de Souza Farias"></option>
             <option value="Giovanna F. Villanova de Souza"></option>
             <option value="Hudson Dias Gomes"></option>
             <option value="Illas de Faria Ribeiro"></option>
             <option value="João Valdeci da Silva"></option>
+            <option value="Julio Santos Braga"></option>
             <option value="Kleber Batista dos Santos"></option>
             <option value="Luis Alberto de Morais"></option>
             <option value="Luis Claudio Ramos"></option>
+            <option value="Luiz Felipe Andrade"></option>
             <option value="Marcelo do Amaral"></option>
+            <option value="Marcelo Henrique Silva"></option>
             <option value="Marcos Antonio Moreira"></option>
             <option value="Marcos Cid Pereta"></option>
             <option value="Marcos Roberto Marques"></option>
@@ -860,6 +864,7 @@
             <option value="Rodrigo Américo Araújo"></option>
             <option value="Rodrigo Peretta Carneiro"></option>
             <option value="Rudge Nunes de Assis"></option>
+            <option value="Thiago de Almeida Prudente"></option>
             <option value="Tiago Paiva"></option>
             <option value="Titilo Prado"></option>
             <option value="Wagner Bonelli"></option>
